app/assets/stylesheets/objects/comments.scss
// Styles for discussions, forums, and comments.

.comment-outer {
  margin-bottom: 20px;
  position: relative;
}

.comment-left-fixed {
  display: none;
  left: 0;
  position: absolute;
  top: 0;
  width: 64px;
}

.comment-right-fluid {
  position: relative;
}

@media screen and (min-width: $screen-sm-min) {
  .comment-left-fixed {
    display: block;
  }

  .comment-right-fluid {
    margin-left: 64px;
  }
}

.comment-box {
  @include scale-images;
  border: 1px solid $brand-gray;
  border-radius: 2px;
}

.comment-action {
  margin: 15px 10px;
}

.comment-header {
  background-color: $brand-gray-lightest;
  border-bottom: 1px solid $brand-gray;
  padding: 10px;
  position: relative;

  &.comment-unread::after {
    border-right-color: $alert-warning-bg;
  }
}

.comment-tab,
.comment-tab:active,
.comment-tab:focus,
.comment-tab:hover {
  border: 1px solid transparent;
  border-bottom: 0;
  border-radius: 4px 4px 0 0;
  color: $text-muted;
  display: inline-block;
  margin-bottom: -11px;
  margin-top: -5px;
  outline: none;
  padding-bottom: 11px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 4px;
  text-decoration: none;

  &.active {
    background-color: $brand-white;
    border-color: $brand-gray;
    color: $text-color;
  }
}


.comment-body {
  @include remove-last-child-bottom-margin;
  padding: 10px;
}

.comment-control {
  background-color: $input-bg;
  background-image: none;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  color: $input-color;
  display: block;
  font-size: $font-size-base;
  height: auto;
  line-height: $line-height-base;
  outline: none;
  padding: 0;
  resize: none;
  width: 100%;
}

.comment-header::before {
  border-bottom: 7px solid transparent;
  border-right: 7px solid $brand-gray;
  border-top: 7px solid transparent;
  content: '';
  height: 0;
  left: -7px;
  position: absolute;
  top: 14px;
  width: 0;
}

.comment-header::after {
  border-bottom: 7px solid transparent;
  border-right: 7px solid $brand-gray-lightest;
  border-top: 7px solid transparent;
  content: '';
  height: 0;
  left: -6px;
  position: absolute;
  top: 14px;
  width: 0;
}

.comment-icon {
  display: none;
  left: -16px;
  position: absolute;
}

@media screen and (min-width: $screen-sm-min) {
  .comment-icon {
    display: block;
  }
}

.comment-unread {
  background-color: $alert-warning-bg;
  color: $alert-warning-text;
}

